force-app/main/default/objects/Case/fields/UPF_CaseResolution__c.field-meta.xml
<CustomField>
    <fullName>UPF_CaseResolution__c</fullName>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resol 1</fullName>
            </value>
            <value>
                <fullName>Resol 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>