force-app/main/default/objects/Case/fields/UPF_CaseResolutionDescription__c.field-meta.xml
<CustomField>
    <fullName>UPF_CaseResolutionDescription__c</fullName>
    <label>Case Resolution Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>