force-app/main/default/objects/Case/fields/UPF_CaseSubtype__c.field-meta.xml
<CustomField>
    <fullName>UPF_CaseSubtype__c</fullName>
    <label>Case Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>subtype 1</fullName>
            </value>
            <value>
                <fullName>subtype 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>