force-app/main/default/objects/Case/recordTypes/Supportrectype.recordType-meta.xml
<RecordType>
    <fullName>Supportrectype</fullName>
    <active>true</active>
    <businessProcess>Support1</businessProcess>
    <label>Supportrectype</label>
</RecordType>